--- a/cyberimmunity-traffic-lights-example.ipynb
+++ b/cyberimmunity-traffic-lights-example.ipynb
@@ -145,7 +145,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 21,
       "metadata": {
         "datalore": {
           "hide_input_from_viewers": false,
@@ -221,7 +221,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 22,
       "metadata": {
         "datalore": {
           "hide_input_from_viewers": false,
@@ -255,6 +255,12 @@
         "    {\"direction_1\": \"off\", \"direction_2\": \"off\"},\n",
         "    {\"direction_1\": \"green\", \"direction_2\": \"red\"},\n",
         "    {\"direction_1\": \"green\", \"direction_2\": \"yellow\"},\n",
+        "\n",
+        "    {\"direction_1\": \"off\", \"direction_2\": \"blinked yellow\"},\n",
+        "    {\"direction_1\": \"green\", \"direction_2\": \"blinked yellow\"},\n",
+        "    {\"direction_1\": \"yellow\", \"direction_2\": \"blinked yellow\"},\n",
+        "    {\"direction_1\": \"red\", \"direction_2\": \"blinked yellow\"},\n",
+        "\n",
         "]\n",
         "\n",
         "\n",
@@ -400,7 +406,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 23,
       "metadata": {
         "datalore": {
           "hide_input_from_viewers": false,
@@ -439,7 +445,7 @@
         "        print(f'[{self.__class__.__name__}] старт')\n",
         "        print(f'[{self.__class__.__name__}] отправляем тестовый запрос')\n",
         "\n",
-        "        mode = {\"direction_1\": \"red\", \"direction_2\": \"green\"}\n",
+        "        mode = {\"direction_1\": \"green\", \"direction_2\": \"green\"}\n",
         "\n",
         "        # запрос для сущности WorkerB - \"скажи hello\"\n",
         "        event = Event(source=self.__class__.__name__,\n",
@@ -474,7 +480,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 24,
       "metadata": {
         "datalore": {
           "hide_input_from_viewers": false,
@@ -544,7 +550,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 25,
       "metadata": {
         "datalore": {
           "hide_input_from_viewers": false,
@@ -584,7 +590,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 26,
       "metadata": {
         "datalore": {
           "hide_input_from_viewers": false,
@@ -595,13 +601,16 @@
           },
           "type": "CODE"
         },
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
         "id": "LmjRB4xNTQ1l",
-        "outputId": "7d2a1a5f-3425-4b8d-eec3-290a3a995e38"
+        "outputId": "e671838a-600c-4b1a-f876-3c4e82d71774"
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "[монитор] регистрируем сущность ControlSystem\n",
             "[монитор] регистрируем сущность LightsGPIO\n"
@@ -653,7 +662,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 27,
       "metadata": {
         "datalore": {
           "hide_input_from_viewers": false,
@@ -664,24 +673,25 @@
           },
           "type": "CODE"
         },
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
         "id": "g_vqXaDrTQ1l",
-        "outputId": "8593226e-35a6-4593-b016-442ef834b00f"
+        "outputId": "415f5643-4ee6-4bfa-e1d0-cf9ceae1df33"
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "[монитор] старт\n",
-            "[ControlSystem] старт[ControlSystem] отправляем тестовый запрос\n",
-            "\n",
+            "[ControlSystem] старт\n",
+            "[ControlSystem] отправляем тестовый запрос\n",
             "[LightsGPIO] старт[ControlSystem] завершение работы\n",
             "\n",
-            "[монитор] обрабатываем событие Event(source='ControlSystem', destination='LightsGPIO', operation='set_mode', parameters='{\"direction_1\": \"red\", \"direction_2\": \"green\"}')\n",
-            "[монитор] проверяем конфигурацию {'direction_1': 'red', 'direction_2': 'green'}\n",
-            "[монитор] отправляем запрос Event(source='ControlSystem', destination='LightsGPIO', operation='set_mode', parameters='{\"direction_1\": \"red\", \"direction_2\": \"green\"}')\n",
-            "[LightsGPIO] ControlSystem запрашивает изменение режима {\"direction_1\": \"red\", \"direction_2\": \"green\"}\n",
-            "[LightsGPIO] новый режим: {\"direction_1\": \"red\", \"direction_2\": \"green\"}!\n",
+            "[монитор] обрабатываем событие Event(source='ControlSystem', destination='LightsGPIO', operation='set_mode', parameters='{\"direction_1\": \"green\", \"direction_2\": \"green\"}')\n",
+            "[монитор] проверяем конфигурацию {'direction_1': 'green', 'direction_2': 'green'}\n",
+            "[монитор] событие не разрешено политиками безопасности\n",
             "[LightsGPIO] завершение работы\n"
           ]
         }
@@ -713,7 +723,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 28,
       "metadata": {
         "datalore": {
           "hide_input_from_viewers": false,
@@ -724,19 +734,9 @@
           },
           "type": "CODE"
         },
-        "id": "nR20Qby1TQ1m",
-        "outputId": "f3a50379-4146-4625-8f05-ee94445bd0a5"
+        "id": "nR20Qby1TQ1m"
       },
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "[монитор] проверяем запрос ControlEvent(operation='stop')\n",
-            "[монитор] завершение работы\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "monitor.stop()\n",
         "control_system.join()\n",
