--- a/cyberimmunity-traffic-lights-example.ipynb
+++ b/cyberimmunity-traffic-lights-example.ipynb
@@ -3,6 +3,16 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/MrMayow/traffic-light/blob/feature%2F1/cyberimmunity-traffic-lights-example.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "datalore": {
           "hide_input_from_viewers": false,
           "hide_output_from_viewers": false,
@@ -12,7 +22,7 @@
           },
           "type": "MD"
         },
-        "id": "TdJtH3XUiQSo"
+        "id": "yTL0GbfEAoTj"
       },
       "source": [
         "# Кибериммунный подход к разработке. Учебный пример \"Светофор\"\n",
@@ -31,7 +41,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "z1XQ0JAFiQSq"
+        "id": "84DQFI51AoTj"
       },
       "source": [
         "## О примере\n",
@@ -54,7 +64,7 @@
           },
           "type": "MD"
         },
-        "id": "bhC4IdGSiQSq"
+        "id": "wRdIfldyAoTk"
       },
       "source": [
         "## Простая реализация выбранной политики архитектуры\n",
@@ -98,7 +108,7 @@
           },
           "type": "MD"
         },
-        "id": "GfJLkwMUiQSq"
+        "id": "hGVO6ESNAoTk"
       },
       "source": [
         "Очередь событий для монитора безопасности: все запросы от сущностей друг к другу должны отправляться только в неё"
@@ -106,7 +116,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "datalore": {
           "hide_input_from_viewers": false,
@@ -117,7 +127,7 @@
           },
           "type": "CODE"
         },
-        "id": "Ay-dR-AniQSq"
+        "id": "8SYXazRwAoTk"
       },
       "outputs": [],
       "source": [
@@ -137,7 +147,7 @@
           },
           "type": "MD"
         },
-        "id": "HwJQy0PgiQSr"
+        "id": "U-wK2sSvAoTk"
       },
       "source": [
         "Зафиксируем формат сообщений"
@@ -156,7 +166,7 @@
           },
           "type": "CODE"
         },
-        "id": "XjlY5DJIiQSr"
+        "id": "JpJsrdV5AoTk"
       },
       "outputs": [],
       "source": [
@@ -183,7 +193,7 @@
           },
           "type": "MD"
         },
-        "id": "-T_wdKnRiQSr"
+        "id": "cvAeJ05GAoTk"
       },
       "source": [
         "### Монитор безопасности"
@@ -201,7 +211,7 @@
           },
           "type": "MD"
         },
-        "id": "wjTVrNz0iQSr"
+        "id": "PXfhr-b9AoTk"
       },
       "source": [
         "Ниже в методе _check_policies можно увидеть пример политики безопасности:\n",
@@ -232,7 +242,7 @@
           },
           "type": "CODE"
         },
-        "id": "bBdQq-vDiQSs"
+        "id": "OkCeXTpWAoTk"
       },
       "outputs": [],
       "source": [
@@ -255,6 +265,7 @@
         "    {\"direction_1\": \"off\", \"direction_2\": \"off\"},\n",
         "    {\"direction_1\": \"green\", \"direction_2\": \"red\"},\n",
         "    {\"direction_1\": \"green\", \"direction_2\": \"yellow\"},\n",
+        "    {\"direction_1\": \"yellow_blinking\", \"direction_2\": \"yellow_blinking\"},\n",
         "]\n",
         "\n",
         "\n",
@@ -390,7 +401,7 @@
           },
           "type": "MD"
         },
-        "id": "P5SMRXdSiQSs"
+        "id": "jD62jiKfAoTk"
       },
       "source": [
         "### Сущность ControlSystem\n",
@@ -411,7 +422,7 @@
           },
           "type": "CODE"
         },
-        "id": "PKp7JgHdiQSs"
+        "id": "H14XRWzlAoTk"
       },
       "outputs": [],
       "source": [
@@ -464,7 +475,7 @@
           },
           "type": "MD"
         },
-        "id": "p_5ERb-ciQSs"
+        "id": "0C_KceseAoTl"
       },
       "source": [
         "### Сущность LightsGPIO\n",
@@ -485,7 +496,7 @@
           },
           "type": "CODE"
         },
-        "id": "yHewgDryiQSs"
+        "id": "R5yDbr2jAoTl"
       },
       "outputs": [],
       "source": [
@@ -536,7 +547,7 @@
           },
           "type": "MD"
         },
-        "id": "Pxwevv0niQSs"
+        "id": "RRAT3LY-AoTl"
       },
       "source": [
         "### Инициализируем монитор и сущности"
@@ -555,7 +566,7 @@
           },
           "type": "CODE"
         },
-        "id": "ygbUBBS4iQSs"
+        "id": "P8Mp0pkxAoTl"
       },
       "outputs": [],
       "source": [
@@ -576,7 +587,7 @@
           },
           "type": "MD"
         },
-        "id": "zAY3pj1-iQSs"
+        "id": "9tFr0QIpAoTl"
       },
       "source": [
         "регистрируем очереди сущностей в мониторе"
@@ -595,8 +606,8 @@
           },
           "type": "CODE"
         },
-        "id": "PfbRObtYiQSs",
-        "outputId": "afd084e6-3189-4f4a-dfe4-6793061fb7d0"
+        "id": "HFEJyzG0AoTl",
+        "outputId": "cbd17c35-dc44-4036-d38f-7eccefb2c04b"
       },
       "outputs": [
         {
@@ -625,7 +636,7 @@
           },
           "type": "MD"
         },
-        "id": "buG5ucLTiQSt"
+        "id": "VliC-cwEAoTl"
       },
       "source": [
         "### Запускаем всё"
@@ -643,7 +654,7 @@
           },
           "type": "MD"
         },
-        "id": "6xLIogV2iQSt"
+        "id": "U5Vj8QomAoTl"
       },
       "source": [
         "Ожидаемая последовательность событий\n",
@@ -664,8 +675,8 @@
           },
           "type": "CODE"
         },
-        "id": "I-iVRapXiQSt",
-        "outputId": "477f5433-f798-437a-d22e-ee8fce2b26b5"
+        "id": "Ix1TJ36EAoTl",
+        "outputId": "6deb3fd6-e8e1-4364-fd08-34243015364e"
       },
       "outputs": [
         {
@@ -705,7 +716,7 @@
           },
           "type": "MD"
         },
-        "id": "fw-YAaHuiQSt"
+        "id": "BiCUTpTYAoTl"
       },
       "source": [
         "### Теперь останавливаем"
@@ -724,8 +735,8 @@
           },
           "type": "CODE"
         },
-        "id": "wbfQTKdDiQSt",
-        "outputId": "6353fcbc-9768-4ddd-9510-f89ac7c96f35"
+        "id": "h7vg37x5AoTl",
+        "outputId": "10e92ca4-ec1d-40e9-ca81-927d025dfd98"
       },
       "outputs": [
         {
@@ -756,7 +767,7 @@
           },
           "type": "MD"
         },
-        "id": "7pKl7s78iQSt"
+        "id": "xHC-wdyrAoTl"
       },
       "source": [
         "## Заключение\n",
@@ -778,7 +789,7 @@
           },
           "type": "MD"
         },
-        "id": "jvk_CDb2iQSt"
+        "id": "KCjCcZmdAoTl"
       },
       "source": [
         "## Упражнения\n",
@@ -804,7 +815,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "l0ZlssIDiQSt"
+        "id": "HUUQNQB-AoTl"
       },
       "source": []
     }
@@ -835,7 +846,8 @@
       "version": "3.8.10"
     },
     "colab": {
-      "provenance": []
+      "provenance": [],
+      "include_colab_link": true
     }
   },
   "nbformat": 4,
