--- a/cyberimmunity-traffic-lights-example.ipynb
+++ b/cyberimmunity-traffic-lights-example.ipynb
@@ -3,16 +3,6 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/MrMayow/traffic-light/blob/feature%2F1/cyberimmunity-traffic-lights-example.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "datalore": {
           "hide_input_from_viewers": false,
           "hide_output_from_viewers": false,
@@ -258,13 +248,15 @@
         "# список разрешенных сочетаний сигналов светофора\n",
         "# любые сочетания, отсутствующие в этом списке, запрещены\n",
         "traffic_lights_allowed_configurations = [\n",
-        "    {\"direction_1\": \"red\", \"direction_2\": \"green\"},\n",
-        "    {\"direction_1\": \"red\", \"direction_2\": \"red\"},\n",
-        "    {\"direction_1\": \"red\", \"direction_2\": \"yellow\"},\n",
-        "    {\"direction_1\": \"yellow\", \"direction_2\": \"yellow\"},\n",
-        "    {\"direction_1\": \"off\", \"direction_2\": \"off\"},\n",
-        "    {\"direction_1\": \"green\", \"direction_2\": \"red\"},\n",
-        "    {\"direction_1\": \"green\", \"direction_2\": \"yellow\"},\n",
+        "    {\"direction_1\": \"red\", \"direction_2\": \"green\", \"direction_1_arrow\" : \"off\", \"direction_2_arrow\" : \"on\"},\n",
+        "    {\"direction_1\": \"green\", \"direction_2\": \"red\", \"direction_1_arrow\" : \"on\", \"direction_2_arrow\" : \"off\"},\n",
+        "    {\"direction_1\": \"red\", \"direction_2\": \"red\", \"direction_1_arrow\" : \"off\", \"direction_2_arrow\" : \"off\"},\n",
+        "    {\"direction_1\": \"red\", \"direction_2\": \"yellow\", \"direction_1_arrow\" : \"off\", \"direction_2_arrow\" : \"on\"},\n",
+        "    {\"direction_1\": \"yellow\", \"direction_2\": \"yellow\", \"direction_1_arrow\" : \"on\", \"direction_2_arrow\" : \"on\"},\n",
+        "    {\"direction_1\": \"off\", \"direction_2\": \"off\", \"direction_1_arrow\" : \"off\", \"direction_2_arrow\" : \"off\"},\n",
+        "    {\"direction_1\": \"green\", \"direction_2\": \"red\", \"direction_1_arrow\" : \"on\", \"direction_2_arrow\" : \"off\"},\n",
+        "    {\"direction_1\": \"green\", \"direction_2\": \"yellow\", \"direction_1_arrow\" : \"on\", \"direction_2_arrow\" : \"on\"},\n",
+        "    {\"direction_1\": \"yellow_blinking\", \"direction_2\": \"yellow_blinking\", \"direction_1_arrow\" : \"off\", \"direction_2_arrow\" : \"off\"},\n",
         "]\n",
         "\n",
         "\n",
@@ -318,6 +310,12 @@
         "        if event.source == \"ControlSystem\" \\\n",
         "                and event.destination == \"LightsGPIO\" \\\n",
         "                and event.operation == \"set_mode\" \\\n",
+        "                and self._check_mode(event.parameters):\n",
+        "            authorized = True\n",
+        "\n",
+        "        if event.source == \"LightsGPIO\" \\\n",
+        "                and event.destination == \"SelfDiagnosticsSystem\" \\\n",
+        "                and event.operation == \"save_log\" \\\n",
         "                and self._check_mode(event.parameters):\n",
         "            authorized = True\n",
         "\n",
@@ -450,7 +448,7 @@
         "        print(f'[{self.__class__.__name__}] старт')\n",
         "        print(f'[{self.__class__.__name__}] отправляем тестовый запрос')\n",
         "\n",
-        "        mode1 = {\"direction_1\": \"red\", \"direction_2\": \"red\"}\n",
+        "        mode1 = {\"direction_1\": \"red\", \"direction_2\": \"green\", \"direction_1_arrow\" : \"off\", \"direction_2_arrow\" : \"on\"}\n",
         "\n",
         "        # запрос для сущности WorkerB - \"скажи hello\"\n",
         "        event1 = Event(source=self.__class__.__name__,\n",
@@ -459,8 +457,7 @@
         "                      parameters=json.dumps(mode1)\n",
         "                      )\n",
         "\n",
-        "\n",
-        "        mode2 = {\"direction_1\": \"red\", \"direction_2\": \"green\"}\n",
+        "        mode2 = {\"direction_1\": \"green\", \"direction_2\": \"red\", \"direction_1_arrow\" : \"on\", \"direction_2_arrow\" : \"off\"}\n",
         "\n",
         "        # запрос для сущности WorkerB - \"скажи hello\"\n",
         "        event2 = Event(source=self.__class__.__name__,\n",
@@ -475,6 +472,58 @@
         "        self.monitor_queue.put(event2)\n",
         "        print(f'[{self.__class__.__name__}] завершение работы')"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from multiprocessing import Queue, Process\n",
+        "import json\n",
+        "\n",
+        "\n",
+        "class SelfDiagnosticsSystem(Process):\n",
+        "\n",
+        "    def __init__(self, monitor_queue: Queue):\n",
+        "        super().__init__()\n",
+        "        self.monitor_queue = monitor_queue\n",
+        "        self._own_queue = Queue()\n",
+        "\n",
+        "    def entity_queue(self):\n",
+        "        return self._own_queue\n",
+        "\n",
+        "\n",
+        "    def run(self):\n",
+        "        print(f'[{self.__class__.__name__}] старт')\n",
+        "        print(f'[{self.__class__.__name__}] отправляем тестовый запрос')\n",
+        "\n",
+        "        mode1 = {\"direction_1\": \"red\", \"direction_2\": \"green\", \"direction_1_arrow\" : \"off\", \"direction_2_arrow\" : \"on\"}\n",
+        "\n",
+        "        # запрос для сущности WorkerB - \"скажи hello\"\n",
+        "        event1 = Event(source=self.__class__.__name__,\n",
+        "                      destination='LightsGPIO',\n",
+        "                      operation='set_mode',\n",
+        "                      parameters=json.dumps(mode1)\n",
+        "                      )\n",
+        "\n",
+        "        mode2 = {\"direction_1\": \"green\", \"direction_2\": \"red\", \"direction_1_arrow\" : \"on\", \"direction_2_arrow\" : \"off\"}\n",
+        "\n",
+        "        # запрос для сущности WorkerB - \"скажи hello\"\n",
+        "        event2 = Event(source=self.__class__.__name__,\n",
+        "                      destination='LightsGPIO',\n",
+        "                      operation='set_mode',\n",
+        "                      parameters=json.dumps(mode2)\n",
+        "                      )\n",
+        "\n",
+        "\n",
+        "\n",
+        "        self.monitor_queue.put(event1)\n",
+        "        self.monitor_queue.put(event2)\n",
+        "        print(f'[{self.__class__.__name__}] завершение работы')"
+      ],
+      "metadata": {
+        "id": "UEzaUrlYVk0M"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -542,9 +591,17 @@
         "                    print(f\"[{self.__class__.__name__}] {event.source} запрашивает изменение режима {event.parameters}\")\n",
         "                    print(f\"[{self.__class__.__name__}] новый режим: {event.parameters}!\")\n",
         "\n",
+        "                event_send = Event(source=self.__class__.__name__,\n",
+        "                      destination='SelfDiagnosticsSystem',\n",
+        "                      operation='save_log',\n",
+        "                      parameters=json.dumps(event.parametrs)\n",
+        "                      )\n",
+        "                self.monitor_queue.put(event_send)\n",
+        "\n",
         "            except Empty:\n",
         "                sleep(0.2)\n",
         "                attempts -= 1\n",
+        "\n",
         "        print(f'[{self.__class__.__name__}] завершение работы')"
       ]
     },
@@ -585,7 +642,8 @@
       "source": [
         "monitor = Monitor(monitor_events_queue)\n",
         "control_system = ControlSystem(monitor_events_queue)\n",
-        "lights_gpio = LightsGPIO(monitor_events_queue)"
+        "lights_gpio = LightsGPIO(monitor_events_queue)\n",
+        "self_diagnostics_system = SelfDiagnosticsSystem(monitor_events_queue)"
       ]
     },
     {
@@ -619,11 +677,11 @@
           },
           "type": "CODE"
         },
-        "id": "4QtfNagsI4JW",
-        "outputId": "6288be17-55eb-41d2-c0f1-91106bf1180e",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "4QtfNagsI4JW",
+        "outputId": "6288be17-55eb-41d2-c0f1-91106bf1180e"
       },
       "outputs": [
         {
@@ -637,7 +695,8 @@
       ],
       "source": [
         "monitor.add_entity_queue(control_system.__class__.__name__, control_system.entity_queue())\n",
-        "monitor.add_entity_queue(lights_gpio.__class__.__name__, lights_gpio.entity_queue())"
+        "monitor.add_entity_queue(lights_gpio.__class__.__name__, lights_gpio.entity_queue())\n",
+        "monitor.add_entity_queue(self_diagnostics_system.__class__.__name__, self_diagnostics_system.entity_queue())"
       ]
     },
     {
@@ -691,11 +750,11 @@
           },
           "type": "CODE"
         },
-        "id": "iMMJolEdI4JW",
-        "outputId": "f25132f2-c5c2-40ab-d818-8a26f9be77d2",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "iMMJolEdI4JW",
+        "outputId": "f25132f2-c5c2-40ab-d818-8a26f9be77d2"
       },
       "outputs": [
         {
@@ -861,8 +920,7 @@
       "version": "3.8.10"
     },
     "colab": {
-      "provenance": [],
-      "include_colab_link": true
+      "provenance": []
     }
   },
   "nbformat": 4,
