--- a/cyberimmunity-traffic-lights-example.ipynb
+++ b/cyberimmunity-traffic-lights-example.ipynb
@@ -106,7 +106,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 82,
+      "execution_count": 161,
       "metadata": {
         "datalore": {
           "hide_input_from_viewers": false,
@@ -145,7 +145,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 83,
+      "execution_count": 162,
       "metadata": {
         "datalore": {
           "hide_input_from_viewers": false,
@@ -221,7 +221,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 84,
+      "execution_count": 163,
       "metadata": {
         "datalore": {
           "hide_input_from_viewers": false,
@@ -283,6 +283,7 @@
         "            mode = json.loads(mode_str)\n",
         "            # проверим входит ли запрашиваемый режим в список разрешённых\n",
         "            print(f\"[монитор] проверяем конфигурацию {mode}\")\n",
+        "\n",
         "            if mode in traffic_lights_allowed_configurations:\n",
         "                # такой режим найден, можно активировать\n",
         "                mode_ok = True\n",
@@ -408,7 +409,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 85,
+      "execution_count": 164,
       "metadata": {
         "datalore": {
           "hide_input_from_viewers": false,
@@ -492,37 +493,25 @@
         "\n",
         "\n",
         "    def run(self):\n",
-        "        print(f'[{self.__class__.__name__}] старт')\n",
-        "        print(f'[{self.__class__.__name__}] отправляем тестовый запрос')\n",
+        "          print(f'[{self.__class__.__name__}] старт')\n",
+        "          attempts = 50\n",
+        "          while attempts > 0:\n",
+        "              try:\n",
+        "                  event: Event = self._own_queue.get_nowait()\n",
+        "                  if event.operation == \"save_log\":\n",
+        "                      print(f\"[{self.__class__.__name__}] {event.source} запрашивает сохранение лога {event.parameters}\")\n",
+        "                      print(f\"[{self.__class__.__name__}] сохраненный лог: {event.parameters}!\")\n",
         "\n",
-        "        mode1 = {\"direction_1\": \"red\", \"direction_2\": \"green\", \"direction_1_arrow\" : \"off\", \"direction_2_arrow\" : \"on\"}\n",
+        "              except Empty:\n",
+        "                  sleep(0.2)\n",
+        "                  attempts -= 1\n",
         "\n",
-        "        # запрос для сущности WorkerB - \"скажи hello\"\n",
-        "        event1 = Event(source=self.__class__.__name__,\n",
-        "                      destination='LightsGPIO',\n",
-        "                      operation='set_mode',\n",
-        "                      parameters=json.dumps(mode1)\n",
-        "                      )\n",
-        "\n",
-        "        mode2 = {\"direction_1\": \"green\", \"direction_2\": \"red\", \"direction_1_arrow\" : \"on\", \"direction_2_arrow\" : \"off\"}\n",
-        "\n",
-        "        # запрос для сущности WorkerB - \"скажи hello\"\n",
-        "        event2 = Event(source=self.__class__.__name__,\n",
-        "                      destination='LightsGPIO',\n",
-        "                      operation='set_mode',\n",
-        "                      parameters=json.dumps(mode2)\n",
-        "                      )\n",
-        "\n",
-        "\n",
-        "\n",
-        "        self.monitor_queue.put(event1)\n",
-        "        self.monitor_queue.put(event2)\n",
-        "        print(f'[{self.__class__.__name__}] завершение работы')"
+        "          print(f'[{self.__class__.__name__}] завершение работы')"
       ],
       "metadata": {
         "id": "UEzaUrlYVk0M"
       },
-      "execution_count": null,
+      "execution_count": 165,
       "outputs": []
     },
     {
@@ -547,7 +536,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 86,
+      "execution_count": 166,
       "metadata": {
         "datalore": {
           "hide_input_from_viewers": false,
@@ -591,12 +580,12 @@
         "                    print(f\"[{self.__class__.__name__}] {event.source} запрашивает изменение режима {event.parameters}\")\n",
         "                    print(f\"[{self.__class__.__name__}] новый режим: {event.parameters}!\")\n",
         "\n",
-        "                event_send = Event(source=self.__class__.__name__,\n",
+        "                event_log = Event(source=self.__class__.__name__,\n",
         "                      destination='SelfDiagnosticsSystem',\n",
         "                      operation='save_log',\n",
-        "                      parameters=json.dumps(event.parametrs)\n",
+        "                      parameters = event.parameters\n",
         "                      )\n",
-        "                self.monitor_queue.put(event_send)\n",
+        "                self.monitor_queue.put(event_log)\n",
         "\n",
         "            except Empty:\n",
         "                sleep(0.2)\n",
@@ -625,7 +614,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 87,
+      "execution_count": 167,
       "metadata": {
         "datalore": {
           "hide_input_from_viewers": false,
@@ -666,7 +655,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 88,
+      "execution_count": 168,
       "metadata": {
         "datalore": {
           "hide_input_from_viewers": false,
@@ -681,7 +670,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "4QtfNagsI4JW",
-        "outputId": "6288be17-55eb-41d2-c0f1-91106bf1180e"
+        "outputId": "5735e7b7-980c-4f32-f5e6-a806afb96eea"
       },
       "outputs": [
         {
@@ -689,7 +678,8 @@
           "name": "stdout",
           "text": [
             "[монитор] регистрируем сущность ControlSystem\n",
-            "[монитор] регистрируем сущность LightsGPIO\n"
+            "[монитор] регистрируем сущность LightsGPIO\n",
+            "[монитор] регистрируем сущность SelfDiagnosticsSystem\n"
           ]
         }
       ],
@@ -739,7 +729,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 89,
+      "execution_count": 169,
       "metadata": {
         "datalore": {
           "hide_input_from_viewers": false,
@@ -754,7 +744,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "iMMJolEdI4JW",
-        "outputId": "f25132f2-c5c2-40ab-d818-8a26f9be77d2"
+        "outputId": "e462f298-bf3b-4954-c244-050dbd07283c"
       },
       "outputs": [
         {
@@ -763,19 +753,32 @@
           "text": [
             "[монитор] старт\n",
             "[ControlSystem] старт\n",
-            "[LightsGPIO] старт[ControlSystem] отправляем тестовый запрос\n",
+            "[LightsGPIO] старт[SelfDiagnosticsSystem] старт[ControlSystem] отправляем тестовый запрос\n",
+            "\n",
             "\n",
             "[ControlSystem] завершение работы\n",
-            "[монитор] обрабатываем событие Event(source='ControlSystem', destination='LightsGPIO', operation='set_mode', parameters='{\"direction_1\": \"red\", \"direction_2\": \"red\"}')\n",
-            "[монитор] проверяем конфигурацию {'direction_1': 'red', 'direction_2': 'red'}\n",
-            "[монитор] отправляем запрос Event(source='ControlSystem', destination='LightsGPIO', operation='set_mode', parameters='{\"direction_1\": \"red\", \"direction_2\": \"red\"}')\n",
-            "[монитор] обрабатываем событие Event(source='ControlSystem', destination='LightsGPIO', operation='set_mode', parameters='{\"direction_1\": \"red\", \"direction_2\": \"green\"}')\n",
-            "[монитор] проверяем конфигурацию {'direction_1': 'red', 'direction_2': 'green'}\n",
-            "[монитор] отправляем запрос Event(source='ControlSystem', destination='LightsGPIO', operation='set_mode', parameters='{\"direction_1\": \"red\", \"direction_2\": \"green\"}')\n",
-            "[LightsGPIO] ControlSystem запрашивает изменение режима {\"direction_1\": \"red\", \"direction_2\": \"red\"}\n",
-            "[LightsGPIO] новый режим: {\"direction_1\": \"red\", \"direction_2\": \"red\"}!\n",
-            "[LightsGPIO] ControlSystem запрашивает изменение режима {\"direction_1\": \"red\", \"direction_2\": \"green\"}\n",
-            "[LightsGPIO] новый режим: {\"direction_1\": \"red\", \"direction_2\": \"green\"}!\n",
+            "[монитор] обрабатываем событие Event(source='ControlSystem', destination='LightsGPIO', operation='set_mode', parameters='{\"direction_1\": \"red\", \"direction_2\": \"green\", \"direction_1_arrow\": \"off\", \"direction_2_arrow\": \"on\"}')\n",
+            "[монитор] проверяем конфигурацию {'direction_1': 'red', 'direction_2': 'green', 'direction_1_arrow': 'off', 'direction_2_arrow': 'on'}\n",
+            "[монитор] отправляем запрос Event(source='ControlSystem', destination='LightsGPIO', operation='set_mode', parameters='{\"direction_1\": \"red\", \"direction_2\": \"green\", \"direction_1_arrow\": \"off\", \"direction_2_arrow\": \"on\"}')\n",
+            "[монитор] обрабатываем событие Event(source='ControlSystem', destination='LightsGPIO', operation='set_mode', parameters='{\"direction_1\": \"green\", \"direction_2\": \"red\", \"direction_1_arrow\": \"on\", \"direction_2_arrow\": \"off\"}')\n",
+            "[монитор] проверяем конфигурацию {'direction_1': 'green', 'direction_2': 'red', 'direction_1_arrow': 'on', 'direction_2_arrow': 'off'}\n",
+            "[монитор] отправляем запрос Event(source='ControlSystem', destination='LightsGPIO', operation='set_mode', parameters='{\"direction_1\": \"green\", \"direction_2\": \"red\", \"direction_1_arrow\": \"on\", \"direction_2_arrow\": \"off\"}')\n",
+            "[LightsGPIO] ControlSystem запрашивает изменение режима {\"direction_1\": \"red\", \"direction_2\": \"green\", \"direction_1_arrow\": \"off\", \"direction_2_arrow\": \"on\"}\n",
+            "[LightsGPIO] новый режим: {\"direction_1\": \"red\", \"direction_2\": \"green\", \"direction_1_arrow\": \"off\", \"direction_2_arrow\": \"on\"}!\n",
+            "HEREEEEEEEE {\"direction_1\": \"red\", \"direction_2\": \"green\", \"direction_1_arrow\": \"off\", \"direction_2_arrow\": \"on\"}\n",
+            "[LightsGPIO] ControlSystem запрашивает изменение режима {\"direction_1\": \"green\", \"direction_2\": \"red\", \"direction_1_arrow\": \"on\", \"direction_2_arrow\": \"off\"}\n",
+            "[LightsGPIO] новый режим: {\"direction_1\": \"green\", \"direction_2\": \"red\", \"direction_1_arrow\": \"on\", \"direction_2_arrow\": \"off\"}!\n",
+            "HEREEEEEEEE {\"direction_1\": \"green\", \"direction_2\": \"red\", \"direction_1_arrow\": \"on\", \"direction_2_arrow\": \"off\"}\n",
+            "[монитор] обрабатываем событие Event(source='LightsGPIO', destination='SelfDiagnosticsSystem', operation='save_log', parameters='{\"direction_1\": \"red\", \"direction_2\": \"green\", \"direction_1_arrow\": \"off\", \"direction_2_arrow\": \"on\"}')\n",
+            "[монитор] проверяем конфигурацию {'direction_1': 'red', 'direction_2': 'green', 'direction_1_arrow': 'off', 'direction_2_arrow': 'on'}\n",
+            "[монитор] отправляем запрос Event(source='LightsGPIO', destination='SelfDiagnosticsSystem', operation='save_log', parameters='{\"direction_1\": \"red\", \"direction_2\": \"green\", \"direction_1_arrow\": \"off\", \"direction_2_arrow\": \"on\"}')\n",
+            "[монитор] обрабатываем событие Event(source='LightsGPIO', destination='SelfDiagnosticsSystem', operation='save_log', parameters='{\"direction_1\": \"green\", \"direction_2\": \"red\", \"direction_1_arrow\": \"on\", \"direction_2_arrow\": \"off\"}')\n",
+            "[монитор] проверяем конфигурацию {'direction_1': 'green', 'direction_2': 'red', 'direction_1_arrow': 'on', 'direction_2_arrow': 'off'}\n",
+            "[монитор] отправляем запрос Event(source='LightsGPIO', destination='SelfDiagnosticsSystem', operation='save_log', parameters='{\"direction_1\": \"green\", \"direction_2\": \"red\", \"direction_1_arrow\": \"on\", \"direction_2_arrow\": \"off\"}')\n",
+            "[SelfDiagnosticsSystem] LightsGPIO запрашивает сохранение лога {\"direction_1\": \"red\", \"direction_2\": \"green\", \"direction_1_arrow\": \"off\", \"direction_2_arrow\": \"on\"}\n",
+            "[SelfDiagnosticsSystem] сохраненный лог: {\"direction_1\": \"red\", \"direction_2\": \"green\", \"direction_1_arrow\": \"off\", \"direction_2_arrow\": \"on\"}!\n",
+            "[SelfDiagnosticsSystem] LightsGPIO запрашивает сохранение лога {\"direction_1\": \"green\", \"direction_2\": \"red\", \"direction_1_arrow\": \"on\", \"direction_2_arrow\": \"off\"}\n",
+            "[SelfDiagnosticsSystem] сохраненный лог: {\"direction_1\": \"green\", \"direction_2\": \"red\", \"direction_1_arrow\": \"on\", \"direction_2_arrow\": \"off\"}!\n",
             "[монитор] проверяем запрос ControlEvent(operation='stop')\n",
             "[монитор] завершение работы\n"
           ]
@@ -785,6 +788,7 @@
         "monitor.start()\n",
         "control_system.start()\n",
         "lights_gpio.start()\n",
+        "self_diagnostics_system.start()\n",
         "sleep(2)"
       ]
     },
@@ -808,7 +812,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 90,
+      "execution_count": 170,
       "metadata": {
         "datalore": {
           "hide_input_from_viewers": false,
@@ -826,7 +830,8 @@
         "monitor.stop()\n",
         "control_system.join()\n",
         "lights_gpio.join()\n",
-        "monitor.join()"
+        "monitor.join()\n",
+        "self_diagnostics_system.join()"
       ]
     },
     {
