--- a/cyberimmunity-traffic-lights-example.ipynb
+++ b/cyberimmunity-traffic-lights-example.ipynb
@@ -3,6 +3,16 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/MrMayow/traffic-light/blob/feature%2F1/cyberimmunity-traffic-lights-example.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "datalore": {
           "hide_input_from_viewers": false,
           "hide_output_from_viewers": false,
@@ -106,7 +116,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 161,
+      "execution_count": 181,
       "metadata": {
         "datalore": {
           "hide_input_from_viewers": false,
@@ -145,7 +155,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 162,
+      "execution_count": 182,
       "metadata": {
         "datalore": {
           "hide_input_from_viewers": false,
@@ -221,7 +231,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 163,
+      "execution_count": 183,
       "metadata": {
         "datalore": {
           "hide_input_from_viewers": false,
@@ -409,7 +419,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 164,
+      "execution_count": 184,
       "metadata": {
         "datalore": {
           "hide_input_from_viewers": false,
@@ -500,6 +510,7 @@
         "                  event: Event = self._own_queue.get_nowait()\n",
         "                  if event.operation == \"save_log\":\n",
         "                      print(f\"[{self.__class__.__name__}] {event.source} запрашивает сохранение лога {event.parameters}\")\n",
+        "                      ###сохранение лога\n",
         "                      print(f\"[{self.__class__.__name__}] сохраненный лог: {event.parameters}!\")\n",
         "\n",
         "              except Empty:\n",
@@ -511,7 +522,7 @@
       "metadata": {
         "id": "UEzaUrlYVk0M"
       },
-      "execution_count": 165,
+      "execution_count": 185,
       "outputs": []
     },
     {
@@ -536,7 +547,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 166,
+      "execution_count": 186,
       "metadata": {
         "datalore": {
           "hide_input_from_viewers": false,
@@ -614,7 +625,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 167,
+      "execution_count": 187,
       "metadata": {
         "datalore": {
           "hide_input_from_viewers": false,
@@ -655,7 +666,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 168,
+      "execution_count": 188,
       "metadata": {
         "datalore": {
           "hide_input_from_viewers": false,
@@ -670,7 +681,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "4QtfNagsI4JW",
-        "outputId": "5735e7b7-980c-4f32-f5e6-a806afb96eea"
+        "outputId": "05cbadf3-f458-431d-bbed-ca4852608797"
       },
       "outputs": [
         {
@@ -729,7 +740,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 169,
+      "execution_count": 189,
       "metadata": {
         "datalore": {
           "hide_input_from_viewers": false,
@@ -744,7 +755,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "iMMJolEdI4JW",
-        "outputId": "e462f298-bf3b-4954-c244-050dbd07283c"
+        "outputId": "78944ec9-6faa-4b72-ee9e-9c280fc4266a"
       },
       "outputs": [
         {
@@ -753,10 +764,10 @@
           "text": [
             "[монитор] старт\n",
             "[ControlSystem] старт\n",
-            "[LightsGPIO] старт[SelfDiagnosticsSystem] старт[ControlSystem] отправляем тестовый запрос\n",
+            "[LightsGPIO] старт\n",
+            "[ControlSystem] отправляем тестовый запрос\n",
+            "[SelfDiagnosticsSystem] старт[ControlSystem] завершение работы\n",
             "\n",
-            "\n",
-            "[ControlSystem] завершение работы\n",
             "[монитор] обрабатываем событие Event(source='ControlSystem', destination='LightsGPIO', operation='set_mode', parameters='{\"direction_1\": \"red\", \"direction_2\": \"green\", \"direction_1_arrow\": \"off\", \"direction_2_arrow\": \"on\"}')\n",
             "[монитор] проверяем конфигурацию {'direction_1': 'red', 'direction_2': 'green', 'direction_1_arrow': 'off', 'direction_2_arrow': 'on'}\n",
             "[монитор] отправляем запрос Event(source='ControlSystem', destination='LightsGPIO', operation='set_mode', parameters='{\"direction_1\": \"red\", \"direction_2\": \"green\", \"direction_1_arrow\": \"off\", \"direction_2_arrow\": \"on\"}')\n",
@@ -765,18 +776,16 @@
             "[монитор] отправляем запрос Event(source='ControlSystem', destination='LightsGPIO', operation='set_mode', parameters='{\"direction_1\": \"green\", \"direction_2\": \"red\", \"direction_1_arrow\": \"on\", \"direction_2_arrow\": \"off\"}')\n",
             "[LightsGPIO] ControlSystem запрашивает изменение режима {\"direction_1\": \"red\", \"direction_2\": \"green\", \"direction_1_arrow\": \"off\", \"direction_2_arrow\": \"on\"}\n",
             "[LightsGPIO] новый режим: {\"direction_1\": \"red\", \"direction_2\": \"green\", \"direction_1_arrow\": \"off\", \"direction_2_arrow\": \"on\"}!\n",
-            "HEREEEEEEEE {\"direction_1\": \"red\", \"direction_2\": \"green\", \"direction_1_arrow\": \"off\", \"direction_2_arrow\": \"on\"}\n",
             "[LightsGPIO] ControlSystem запрашивает изменение режима {\"direction_1\": \"green\", \"direction_2\": \"red\", \"direction_1_arrow\": \"on\", \"direction_2_arrow\": \"off\"}\n",
             "[LightsGPIO] новый режим: {\"direction_1\": \"green\", \"direction_2\": \"red\", \"direction_1_arrow\": \"on\", \"direction_2_arrow\": \"off\"}!\n",
-            "HEREEEEEEEE {\"direction_1\": \"green\", \"direction_2\": \"red\", \"direction_1_arrow\": \"on\", \"direction_2_arrow\": \"off\"}\n",
             "[монитор] обрабатываем событие Event(source='LightsGPIO', destination='SelfDiagnosticsSystem', operation='save_log', parameters='{\"direction_1\": \"red\", \"direction_2\": \"green\", \"direction_1_arrow\": \"off\", \"direction_2_arrow\": \"on\"}')\n",
             "[монитор] проверяем конфигурацию {'direction_1': 'red', 'direction_2': 'green', 'direction_1_arrow': 'off', 'direction_2_arrow': 'on'}\n",
             "[монитор] отправляем запрос Event(source='LightsGPIO', destination='SelfDiagnosticsSystem', operation='save_log', parameters='{\"direction_1\": \"red\", \"direction_2\": \"green\", \"direction_1_arrow\": \"off\", \"direction_2_arrow\": \"on\"}')\n",
             "[монитор] обрабатываем событие Event(source='LightsGPIO', destination='SelfDiagnosticsSystem', operation='save_log', parameters='{\"direction_1\": \"green\", \"direction_2\": \"red\", \"direction_1_arrow\": \"on\", \"direction_2_arrow\": \"off\"}')\n",
-            "[монитор] проверяем конфигурацию {'direction_1': 'green', 'direction_2': 'red', 'direction_1_arrow': 'on', 'direction_2_arrow': 'off'}\n",
-            "[монитор] отправляем запрос Event(source='LightsGPIO', destination='SelfDiagnosticsSystem', operation='save_log', parameters='{\"direction_1\": \"green\", \"direction_2\": \"red\", \"direction_1_arrow\": \"on\", \"direction_2_arrow\": \"off\"}')\n",
-            "[SelfDiagnosticsSystem] LightsGPIO запрашивает сохранение лога {\"direction_1\": \"red\", \"direction_2\": \"green\", \"direction_1_arrow\": \"off\", \"direction_2_arrow\": \"on\"}\n",
-            "[SelfDiagnosticsSystem] сохраненный лог: {\"direction_1\": \"red\", \"direction_2\": \"green\", \"direction_1_arrow\": \"off\", \"direction_2_arrow\": \"on\"}!\n",
+            "[монитор] проверяем конфигурацию {'direction_1': 'green', 'direction_2': 'red', 'direction_1_arrow': 'on', 'direction_2_arrow': 'off'}[SelfDiagnosticsSystem] LightsGPIO запрашивает сохранение лога {\"direction_1\": \"red\", \"direction_2\": \"green\", \"direction_1_arrow\": \"off\", \"direction_2_arrow\": \"on\"}\n",
+            "\n",
+            "[монитор] отправляем запрос Event(source='LightsGPIO', destination='SelfDiagnosticsSystem', operation='save_log', parameters='{\"direction_1\": \"green\", \"direction_2\": \"red\", \"direction_1_arrow\": \"on\", \"direction_2_arrow\": \"off\"}')[SelfDiagnosticsSystem] сохраненный лог: {\"direction_1\": \"red\", \"direction_2\": \"green\", \"direction_1_arrow\": \"off\", \"direction_2_arrow\": \"on\"}!\n",
+            "\n",
             "[SelfDiagnosticsSystem] LightsGPIO запрашивает сохранение лога {\"direction_1\": \"green\", \"direction_2\": \"red\", \"direction_1_arrow\": \"on\", \"direction_2_arrow\": \"off\"}\n",
             "[SelfDiagnosticsSystem] сохраненный лог: {\"direction_1\": \"green\", \"direction_2\": \"red\", \"direction_1_arrow\": \"on\", \"direction_2_arrow\": \"off\"}!\n",
             "[монитор] проверяем запрос ControlEvent(operation='stop')\n",
@@ -812,7 +821,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 170,
+      "execution_count": null,
       "metadata": {
         "datalore": {
           "hide_input_from_viewers": false,
@@ -828,10 +837,10 @@
       "outputs": [],
       "source": [
         "monitor.stop()\n",
+        "self_diagnostics_system.join()\n",
         "control_system.join()\n",
         "lights_gpio.join()\n",
-        "monitor.join()\n",
-        "self_diagnostics_system.join()"
+        "monitor.join()"
       ]
     },
     {
@@ -925,7 +934,8 @@
       "version": "3.8.10"
     },
     "colab": {
-      "provenance": []
+      "provenance": [],
+      "include_colab_link": true
     }
   },
   "nbformat": 4,
