--- a/cyberimmunity-traffic-lights-example.ipynb
+++ b/cyberimmunity-traffic-lights-example.ipynb
@@ -3,16 +3,6 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/MrMayow/traffic-light/blob/feature%2F1/cyberimmunity-traffic-lights-example.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "datalore": {
           "hide_input_from_viewers": false,
           "hide_output_from_viewers": false,
@@ -821,7 +811,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 190,
       "metadata": {
         "datalore": {
           "hide_input_from_viewers": false,
@@ -934,8 +924,7 @@
       "version": "3.8.10"
     },
     "colab": {
-      "provenance": [],
-      "include_colab_link": true
+      "provenance": []
     }
   },
   "nbformat": 4,
